# PixelForge

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  BVH.cpp  CMakeLists.txt  CMakePresets.json  CODE-OF-CONDUCT.md  COM.cpp  CONTRIBUTING.md  DPI.cpp  Linux-build.yml  PixelForge.cmake  README.md  SECURITY.md  about.html  base-graphics.test.cpp  base-window.test.cpp  bbox.cpp  bbox.hpp  black.py  camera.md  chartreuse.py  cli.py  color.h  config.h  docs.html  graphics.cpp  graphics.hpp  gray.py  green.py  index.html  macros.h  material-.py  material.py  matrix.md  orange.py  pf1.h  premake5.lua  (+12 more)
.github/: CONTRIBUTING.md  CONTRIBUTORS.md
.github/workflows/: Linux-build.yml  MacOS-build.yml  Windows-build.yml  codeql.yml
config/: OpenGL.h  macros.h  openGL.h  os.h
docs/: color.md  ray.md
examples/: example2d.cpp  example3d.cpp
include/: 2d_graphics.h  BVH.cu  BVH.hpp  COM.h  camera.hpp  color.h  graphics.h  matrix.hpp  ray.hpp  transformations.h  vector.hpp  window.h  window.hpp
include/utils/: algorithm.hpp  bitset.hpp  call-on-exit.hpp  concepts.h  constants-evaluated.h  constants.hpp  endianness.hpp  enum-array.hpp  fixed-vector.hpp  flags.hpp  function-ref.hpp  function-traits.h  hash.hpp  math-utils.hpp  memory-helper.hpp  memory-pool.hpp  movable-ptr.hpp  movable-value.hpp  offset-of.h  path-utils.hpp  prerequisites.h  result.hpp  (+10 more)
materials/: shader.vert
source/: 2d_graphics.cpp  color.cpp  transformations.cpp  window.cpp
src/: camera.cpp  matrix.cpp  ray.cpp  raycast.cpp  window.cpp
tools/: gensln.py  globals.py  version.py
(+45 files in other folders)
